feat: user can place buy and sell assets
